back-end parte 2

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 </div>
             </header>
             <main class="px-3">
-                <form>
+                <form class="px-5">
                     <h1 class="h3 mb-3 fw-normal">Vuoi Accedere?</h1>
                     <div class="form-floating m-1">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
