--- a/public/login.html
+++ b/public/login.html
@@ -4,16 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>MarvelHeroes - Home</title>
-
-        <link href="landing.css" rel="stylesheet">
+        <title>MarvelHeroes - Login</title>
+        <link href="public\css\login.css" rel="stylesheet">
     </head>
-
-    <body class="d-flex h-100 text-center bg-darkred text-white">
-        <!--Bootstrap Bundle con Popper (?)-->
+    <body class="d-flex text-center bg-darkred h-100 w-100">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        
-        <div class="landing-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <div class="p-3 mx-auto flex-column d-flex w-100 h-100">
             <header class="mb-auto">
                 <div>
                     <h3 class="float-md-start mv-0">MarvelHeroes</h3>
@@ -25,11 +21,20 @@
                 </div>
             </header>
             <main class="px-3">
-                <h1>Benvenuto su MarvelHeroes!</h1>
-                <p class="lead">Descrizione di sto cazzo di sito</p>
-                <p class="lead">
-                    <a href="" class="btn btn-lg btn-seconadry fw-bold border-white bg-white">Fidati, ci servirà un bottone</a>
-                </p>
+                <form class="px-5">
+                    <h1 class="h3 mb-3 fw-normal">Vuoi Accedere?</h1>
+                    <div class="form-floating m-1">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">email</label>
+                    </div>
+                    <div class="form-floating m-1">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">password</label>
+                    </div>
+                    <div class="m-1 form-floating">                    
+                        <button class="btn btn-lg fw-bold bg-white w-100" type="submit">Accedi</button>
+                    </div>
+                </form>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
