--- a/public/landing.html
+++ b/public/landing.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>MarvelHeroes - Home</title>
 
-        <link href="public\css\landing.css" rel="stylesheet">
+        <link href="css/landing.css" rel="stylesheet">
     </head>
 
     <body class="d-flex h-100 text-center bg-darkred text-white">
