--- a/public/signup.html
+++ b/public/signup.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>MarvelHeroes - Signup</title>
-        <link href="/css/login.css" rel="stylesheet">
+        <link href="css/login.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center bg-darkred h-100 w-100">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -36,7 +36,7 @@
                     <div class="form-floating m-1">
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                         <label for="floatingPassword">password</label>
-                        <div class="invalid-feedback">Il campo pasasword è obbligatorio</div>
+                        <div class="invalid-feedback">Il campo password è obbligatorio</div>
                     </div>
                     <div class="form-floating m-1">
                         <input type="text" class="form-control" id="floatingHero" placeholder="Iron Man" required>
@@ -61,7 +61,6 @@
 
                 form.addEventListener('submit', function(event) {
                     event.preventDefault();
-
                     let isValid = true;
 
                     form.querySelectorAll('input').forEach(input => {
@@ -97,7 +96,7 @@
                                 alert('Errore nella registrazione: ' + data.error);
                             } else {
                                 alert('Registrazione completata con successo!');
-                                //window.location.href = data.redirect;
+                                window.location.href = data.redirect;
                             }
                         })
                         .catch(error => {
