--- a/public/frontend/login.html
+++ b/public/frontend/login.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>MarvelHeroes - Login</title>
-        <link href="css/login.css" rel="stylesheet">
+        <link href="/frontend/css/login.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center bg-darkred h-100 w-100">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
                 </div>
             </header>
             <main class="px-3">
-                <form class="px-5">
+                <form class="px-5" id="loginForm">
                     <h1 class="h3 mb-3 fw-normal">Vuoi Accedere?</h1>
                     <div class="form-floating m-1">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -42,5 +42,46 @@
                 </p>
             </footer>
         </div>
+
+        <script>
+            document.getElementById('loginForm').addEventListener('submit', async function (event) {
+                event.preventDefault(); //Evita il comportamento predefinito del form
+
+                //Raccogli i dati del form
+                const username = document.getElementById('floatingInput').value;
+                const password = document.getElementById('floatingPassword').value;
+
+                try {
+                    //Invio della richiesta POST al server
+                    const response = await fetch('http://127.0.0.1:3000/login', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ username, password })
+                    });
+
+                    if (!response.ok) {
+                        //Se il server restituisce un errore
+                        const errorText = await response.text();
+                        alert('Errore nel login: ' + errorText);
+                        return;
+                    }
+
+                    //Riceve il token JWT dal server
+                    const data = await response.json();
+                    const token = data.token;
+
+                    //Salva il token JWT nel local storage
+                    localStorage.setItem('jwtToken', token);
+
+                    //Redirrect alla homepage
+                    window.location.href = 'http://127.0.0.1:3000/homepage.html';    //configura la route /home
+                } catch (error) {
+                    console.error('Errore durante il login:' , error);
+                    alert('Errore durante il login. Controlla la console per maggiori dettagli.');
+                }
+            });
+        </script>
     </body>
 </html>
