--- a/public/frontend/signup.html
+++ b/public/frontend/signup.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>MarvelHeroes - Signup</title>
-        <link href="css/login.css" rel="stylesheet">
+        <link href="/frontend/css/login.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center bg-darkred h-100 w-100">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -80,7 +80,7 @@
                             hero: document.getElementById('floatingHero').value
                         };
 
-                        fetch('http://127.0.0.1:3000/signup', {
+                        fetch('http://127.0.0.1:3000/api/signup', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
@@ -95,14 +95,6 @@
                             return response.json();
                         })
                         .then(data => {
-                            /*
-                            if (data.error) {
-                                alert('Errore nella registrazione: ' + data.error);
-                            } else if (data.redirect) {
-                                alert('Registrazione completata con successo!');
-                                window.location.href = data.redirect;
-                            }
-                            */
                            if (data.redirect) {
                                 window.location.href = data.redirect;
                            } else {
