--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -63,5 +63,6 @@
                 </p>
             </footer>
         </div>
+        <script src="/frontend/js/access.js"></script>
     </body>
 </html>
