legge i dati di chi ha fatto laccessoooo

--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -18,27 +18,27 @@
                 <div class="container d-flex flex-wrap">
                     <ul class="nav me-auto">
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2 active" aria-current="page">Home</a>
+                            <a href="homepage" class="nav-link link-light px-2 active" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Il Mio Album</a>
+                            <a href="myalbum" class="nav-link link-light px-2">Il Mio Album</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Baratto</a>
+                            <a href="baratto" class="nav-link link-light px-2">Baratto</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Acquista Pacchetti</a>
+                            <a href="compra_pac" class="nav-link link-light px-2">Acquista Pacchetti</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Acquista Crediti</a>
+                            <a href="compra_cre" class="nav-link link-light px-2">Acquista Crediti</a>
                         </li>
                     </ul>
                     <ul class="nav">
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Profilo</a>
+                            <a href="myprofile" class="nav-link link-light px-2">Profilo</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link link-light px-2">Logout</a>
+                            <a href="landing" class="nav-link link-light px-2">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
                 </div>
             </header>
             <main class="container py-4">
-
+                <h1 id="welcomeMessage"></h1>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
@@ -64,5 +64,6 @@
             </footer>
         </div>
         <script src="/frontend/js/access.js"></script>
+        <script src="/frontend/js/homepage.js" defer></script>
     </body>
 </html>
