--- a/public/frontend/login.html
+++ b/public/frontend/login.html
@@ -14,9 +14,9 @@
                 <div>
                     <h3 class="float-md-start mv-0">MarvelHeroes</h3>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                        <a class="nav-link text-white" href="">Iscriviti</a>
-                        <a class="nav-link text-white" href="">Accedi</a>
+                        <a class="nav-link active text-white" aria-current="page" href="landing">Home</a>
+                        <a class="nav-link text-white" href="signup">Iscriviti</a>
+                        <a class="nav-link text-white" href="login">Accedi</a>
                     </nav>
                 </div>
             </header>
