--- a/public/frontend/landing.html
+++ b/public/frontend/landing.html
@@ -18,14 +18,14 @@
                 <div>
                     <h3 class="float-md-start mv-0">MarvelHeroes</h3>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                        <a class="nav-link text-white" href="">Iscriviti</a>
-                        <a class="nav-link text-white" href="">Accedi</a>
+                        <a class="nav-link active text-white" aria-current="page" href="landing">Home</a>
+                        <a class="nav-link text-white" href="signup">Iscriviti</a>
+                        <a class="nav-link text-white" href="login">Accedi</a>
                     </nav>
                 </div>
             </header>
             <main class="px-3">
-                <h1>Benvenuto su MarvelHeroes!</h1>
+                <h1>Eccoti su MarvelHeroes!</h1>
                 <p class="lead">Descrizione di sto cazzo di sito</p>
                 <p class="lead">
                     <a href="" class="btn btn-lg btn-seconadry fw-bold border-white bg-white">Fidati, ci servirà un bottone</a>
