--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -9,7 +9,7 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
         <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
-    <body class="d-flex h-100 text-center bg-darkred text-white">
+    <body class="d-flex text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
@@ -25,13 +25,13 @@
                             <a href="myalbum" class="nav-link link-light px-2">Il Mio Album</a>
                         </li>
                         <li class="nav-item">
-                            <a href="baratto" class="nav-link link-light px-2">Baratto</a>
+                            <a href="compra_cre" class="nav-link link-light px-2">Acquista Crediti</a>
                         </li>
                         <li class="nav-item">
                             <a href="compra_pac" class="nav-link link-light px-2">Acquista Pacchetti</a>
                         </li>
                         <li class="nav-item">
-                            <a href="compra_cre" class="nav-link link-light px-2">Acquista Crediti</a>
+                            <a href="baratto" class="nav-link link-light px-2">Baratto</a>
                         </li>
                     </ul>
                     <ul class="nav">
