inizia la gestione del profilo

--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -61,16 +61,16 @@
                     <!--Figurine caricate dinamicamente-->
                 </div>
 
-                <nav aria-label="Paginazione figurine" class="d-flex justify-content-center mt-4">
+                <nav aria-label="Paginazione figurine" class="d-flex justify-content-center mt-4" id="page-nav">
                     <ul class="pagination">
                         <li class="page-item">
-                            <button class="page-link" id="prev-btn" disabled>Precedente</button>
+                            <button class="page-link" id="prev-btn" disabled>Previous</button>
                         </li>
                         <li class="page-item">
-                            <span class="page-link" id="page-info">Pagina n</span>
+                            <span class="page-link" id="page-info"></span>
                         </li>
                         <li class="page-item">
-                            <button class="page-link" id="next-btn">Successivo</button>
+                            <button class="page-link" id="next-btn">Next</button>
                         </li>
                     </ul>
                 </nav>
