--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -50,8 +50,8 @@
                         <svg class="bi me-2" width="40" height="32"></svg>
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0">
-                        <input type="search" class="form-control" placeholder="Cerca figurine..." aria-label="Search">
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0" id="search-form">
+                        <input type="text" class="form-control" placeholder="Cerca figurine..." aria-label="Cerca" id="search-input">
                     </form>
                 </div>
             </header>
