--- a/public/frontend/compra_cre.html
+++ b/public/frontend/compra_cre.html
@@ -12,7 +12,6 @@
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
-        <!--header-->
         <div class="w-100">
             <nav class="py-2">
                 <div class="container d-flex flex-wrap">
@@ -55,7 +54,15 @@
                 </div>
             </header>
             <main class="container py-4">
-                <h1 id="welcomeMessage"></h1>
+                <div class="container mt-5">
+                    <h1>Acquista Crediti</h1>
+                    <div class="form-group">
+                        <label for="credits-input">Numero di crediti da acquistare:</label>
+                        <input type="number" id="credits-input" class="form-control" min="1" placeholder="Inserisci un numero intero">
+                    </div>
+                    <button id="buy-credits-btn" class="btn btn-primary mt-3">Acquista</button>
+                    <div id="message-container" class="mt-4"></div>
+                </div>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
