molte modifiche, tutto abbastanza insabile, ma siamo sulla buona strada

--- a/public/frontend/compra_cre.html
+++ b/public/frontend/compra_cre.html
@@ -57,6 +57,7 @@
                 <div class="container mt-5">
                     <h1>Acquista Crediti</h1>
                     <div class="form-group">
+                        <h2 id="credits"></h2>
                         <label for="credits-input">Numero di crediti da acquistare:</label>
                         <input type="number" id="credits-input" class="form-control" min="1" placeholder="Inserisci un numero intero">
                     </div>
@@ -70,6 +71,7 @@
                 </p>
             </footer>
         </div>
-        <script src="/frontend/js/homepage.js" defer></script>
+        <!-- <script src="/frontend/js/homepage.js" defer></script> -->
+        <script src="/frontend/js/buyCredits.js"></script>
     </body>
 </html>
