--- a/public/frontend/compra_cre.html
+++ b/public/frontend/compra_cre.html
@@ -7,6 +7,7 @@
         <title>MarvelHeroes - compra crediti</title>
 
         <link href="/frontend/css/homepage.css" rel="stylesheet">
+        <link href="/frontend/css/credits.css" rel="stylesheet">
     </head>
     <body class="d-flex h-100 text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
@@ -42,15 +43,12 @@
                     </ul>
                 </div>
             </nav>
-            <header class="py-3 mb-4">
+            <header class="py-3">
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32"></svg>
+                        <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0">
-                        <input type="search" class="form-control" placeholder="Cerca figurine..." aria-label="Search">
-                    </form>
                 </div>
             </header>
             <main class="container py-4">
@@ -59,7 +57,11 @@
                     <div class="form-group">
                         <h2 id="credits"></h2>
                         <label for="credits-input">Numero di crediti da acquistare:</label>
-                        <input type="number" id="credits-input" class="form-control" min="1" placeholder="Inserisci un numero intero">
+                        <div class="d-flex justify-content-center mt-4">
+                            <div class="input-group" style="width: 200px;">
+                                <input type="number" id="credits-input" class="form-control custom-font-size" min="1" style="height: 150px; width: 75px;">
+                            </div>
+                        </div>
                     </div>
                     <button id="buy-credits-btn" class="btn btn-primary mt-3">Acquista</button>
                     <div id="message-container" class="mt-4"></div>
