--- a/public/frontend/compra_pac.html
+++ b/public/frontend/compra_pac.html
@@ -46,7 +46,7 @@
             <header class="py-3 mb-4">
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32"></svg>
+                        <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0">
