acquisto pacchetti funzionante, ma ancora bruttino

--- a/public/frontend/compra_pac.html
+++ b/public/frontend/compra_pac.html
@@ -7,6 +7,7 @@
         <title>MarvelHeroes - compra pacchetti</title>
 
         <link href="/frontend/css/homepage.css" rel="stylesheet">
+        <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
     <body class="d-flex h-100 text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
