myalbum da sistemare, ancora non funziona

--- a/public/frontend/compra_pac.html
+++ b/public/frontend/compra_pac.html
@@ -9,7 +9,7 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
         <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
-    <body class="d-flex h-100 text-center bg-darkred text-white">
+    <body class="d-flex text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
@@ -57,10 +57,11 @@
             </header>
             <main class="container py-4">
                 <div class="container">
-                    <h1>Acquista un Pacchetto di Figurine</h1>
+                    <h1>Acquista un Pacchetto di 5 Figurine</h1>
+                    <h2>costo: 1 credito</h2>
                     <p id="credits">Crediti: --</p>
-                    <button id="buy-pack">Acquista un pacchetto (1 credito)</button>
-                    <div id="pack-container" class="pack-container"></div>
+                    <button id="buy-pack" class="btn btn-lg fw-bold bg-white mb-4">Acquista</button>
+                    <div id="pack-container" class="pack-container row"></div>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
