--- a/public/frontend/myalbum.html
+++ b/public/frontend/myalbum.html
@@ -8,7 +8,7 @@
 
         <link href="/frontend/css/homepage.css" rel="stylesheet">
     </head>
-    <body class="d-flex h-100 text-center bg-darkred text-white">
+    <body class="d-flex text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
@@ -49,7 +49,7 @@
                         <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0">
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0" id="search-form">
                         <input id="search-input" type="search" class="form-control" placeholder="Cerca figurine..." aria-label="Search">
                     </form>
                 </div>
@@ -58,7 +58,7 @@
                 <h1>Il Mio Album</h1>
 
                 <!-- Contenitore delle figurine -->
-                 <div id="album-container" class="grid-container"></div>
+                 <div id="album-container" class="grid-container row"></div>
 
                 <!-- Paginazione -->
                 <nav aria-label="Paginazione figurine" class="d-flex justify-content-center mt-4" id="page-nav">
