--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="h-100">
+<html lang="it">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
         <title>MarvelHeroes - baratto</title>
 
         <link href="/frontend/css/homepage.css" rel="stylesheet">
+        <link href="/frontend/css/baratto.css" rel="stylesheet">
     </head>
     <body class="d-flex h-100 text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
@@ -49,13 +50,156 @@
                         <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0">
-                        <input type="search" class="form-control" placeholder="Cerca figurine..." aria-label="Search">
-                    </form>
                 </div>
             </header>
-            <main class="container py-4">
-                <h1 id="welcomeMessage"></h1>
+            <main class="container py-4 mt-4">
+                <div class="section-container">
+                    <h2 class="text-dark">Mercato di Scambio</h2>
+                    <div id="marketplace" class="table-responsive">
+                        <table class="table table-striped table-hover text-center align-middle">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Utente</th>
+                                    <th scope="col">Figurina Proposta</th>
+                                    <!-- <th scope="col">Nota</th> -->
+                                    <th scope="col">Proponi Baratto</th>
+                                </tr>
+                            </thead>
+                            <tbody id="marketplace-table">
+                                <!-- riga di esempio: -->
+                                <tr>
+                                    <td><strong>MarioRossi</strong></td>
+                                    <td>
+                                        <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded-circle me-2">
+                                        <span>Iron Man</span>
+                                    </td>
+                                    <!-- <td>Scambio per una figurina rara</td> -->
+                                    <td>
+                                        <button class="btn btn-primary btn-sm">Proponi</button>
+                                    </td>
+                                </tr>
+                                <!-- qui dati caricati dinamicamente -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="section-container mt-4">
+                    <div class="row">
+                        <!-- selezione figurine possedute -->
+                         <div class="col-md-6">
+                            <h5 class="text-center text-dark">Le Tue Figurine</h5>
+                            <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
+                                <ul id="figurine-possedute-list" class="list-group">
+                                    <li class="list-group-item d-flex align-items-center">
+                                        <input type="checkbox" class="form-check-input me-2">
+                                        <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
+                                        <span>Spider-Man</span>
+                                    </li>
+                                    <!-- figurine possedute caricate qui -->
+                                </ul>
+                            </div>
+                            <button id="add-to-market-btn" class="btn btn-success w-100 mt-2">Metti sul mercato</button>
+                         </div>
+
+                         <!-- sezione figurine sul mercato -->
+                          <div class="col-md-6">
+                            <h5 class="text-center text-dark">Le Tue Figurine sul Mercato</h5>
+                            <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
+                                <ul id="figurine-sul-mercato-list" class="list-group">
+                                    <li class="list-group-item d-flex align-items-center">
+                                        <input type="checkbox" class="form-check-input me-2">
+                                        <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
+                                        <span>Captain America</span>
+                                    </li>
+                                    <!-- figurine sul mercato caricate qui -->
+                                </ul>
+                            </div>
+                            <div class="d-flex justify-content-between mt-2">
+                                <button id="remove-from-market-btn" class="btn btn-danger w-50 me-2">Rimuovi dal Mercato</button>
+                                <button id="propose-trade-btn" class="btn btn-primary w-50">Proponi Baratto</button>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="section-container mt-4">
+                    <h5 class="text-center text-dark">Proposte di Scambio</h5>
+                    <h6 class="text-dark">In Entrata</h6>
+                    <div class="row">
+                        <!-- tabella delle proposte di scambio -->
+                         <div class="col-md-8">
+                            <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
+                                <table class="table table-bordered text-center align-middle">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>Utente</th>
+                                            <th>Ti da</th>
+                                            <th>In cambio di</th>
+                                            <th>Azioni</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="proposte-scambio-list">
+                                        <!-- proposte di scambio caricate qui -->
+                                    </tbody>
+                                </table>
+                            </div>
+                         </div>
+
+                         <!-- sezione laterale per la preview dello scambio -->
+                         <div class="col-md-4">
+                            <div class="border-rounded p-3 text-center">
+                                <h6 class="text-dark">Anteprima scambio</h6>
+                                <div class="d-flex flex-column align-items-center">
+                                    <p class="mb-1 text-dark">Hai dato:</p>
+                                    <div id="scambio-figurina-out" class="border p-2 mb-3" style="width: 120px; height: 120px;">
+                                        <!-- figurina data caricata qui -->
+                                    </div>
+                                    <p class="mb-1 text-dark">In cambio di:</p>
+                                    <div id="scambio-figurina-in" class="border p-2" style="width: 120px; height: 120px;">
+                                        <!-- figurina ricevuta caricata qui -->
+                                    </div>
+                                </div>
+                            </div>
+                         </div>
+                    </div>
+
+                    <h6 class="text-dark text-center">In Uscita</h6>
+                    <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
+                        <table class="table table-bordered text-center align-middle">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Hai proposto a</th>
+                                    <th>Di scambiare</th>
+                                    <th>In cambio di</th>
+                                    <th>Stato</th>
+                                </tr>
+                            </thead>
+                            <tbody id="storico-proposte-list">
+                                <!-- storico delle proposte di scambio caricate qui -->
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <h6 class="text-center text-dark">
+                        Proponi Baratto a: <span id="username-destinatario" class="fw-bold"></span>
+                    </h6>
+                    <div class="d-flex justify-content-center gap-4 mt-3">
+                        <div class="text-center">
+                            <h7 class="text-dark">Tu dai</h7>
+                            <div class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
+                                <!-- figurina che vuoi dare caricata qui -->
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <h7 class="text-dark">In cambio di</h7>
+                            <div class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
+                                <!-- figurina che vuoi ricevere caricata qui -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center mt-4">
+                        <button id="proponi-baratto-btn" class="btn btn-primary btn-lg" disabled>Proponi</button>
+                    </div>
+                </div>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
@@ -63,6 +207,6 @@
                 </p>
             </footer>
         </div>
-        <script src="/frontend/js/homepage.js" defer></script>
+        <!-- <script src="/frontend/js/homepage.js" defer></script> -->
     </body>
 </html>
