--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -87,7 +87,7 @@
                     <div class="row">
                         <!-- selezione figurine possedute -->
                          <div class="col-md-6">
-                            <h5 class="text-center text-dark">Le Tue Figurine</h5>
+                            <h5 class="text-center text-dark mt-2">Le Tue Figurine</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-possedute-list" class="list-group">
                                     <li class="list-group-item d-flex align-items-center">
@@ -103,7 +103,7 @@
 
                          <!-- sezione figurine sul mercato -->
                           <div class="col-md-6">
-                            <h5 class="text-center text-dark">Le Tue Figurine sul Mercato</h5>
+                            <h5 class="text-center text-dark mt-2">Le Tue Figurine sul Mercato</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-sul-mercato-list" class="list-group">
                                     <li class="list-group-item d-flex align-items-center">
@@ -208,5 +208,6 @@
             </footer>
         </div>
         <!-- <script src="/frontend/js/homepage.js" defer></script> -->
+        <script src="/frontend/js/market-display.js"></script>
     </body>
 </html>
