--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -67,17 +67,17 @@
                             </thead>
                             <tbody id="marketplace-table">
                                 <!-- riga di esempio: -->
-                                <tr>
+                                <!-- <tr>
                                     <td><strong>MarioRossi</strong></td>
                                     <td>
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded-circle me-2">
                                         <span>Iron Man</span>
-                                    </td>
+                                    </td> -->
                                     <!-- <td>Scambio per una figurina rara</td> -->
-                                    <td>
+                                    <!-- <td>
                                         <button class="btn btn-primary btn-sm">Proponi</button>
                                     </td>
-                                </tr>
+                                </tr> -->
                                 <!-- qui dati caricati dinamicamente -->
                             </tbody>
                         </table>
@@ -90,11 +90,11 @@
                             <h5 class="text-center text-dark mt-2">Le Tue Figurine</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-possedute-list" class="list-group">
-                                    <li class="list-group-item d-flex align-items-center">
+                                    <!-- <li class="list-group-item d-flex align-items-center">
                                         <input type="checkbox" class="form-check-input me-2">
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
                                         <span>Spider-Man</span>
-                                    </li>
+                                    </li> -->
                                     <!-- figurine possedute caricate qui -->
                                 </ul>
                             </div>
@@ -106,11 +106,11 @@
                             <h5 class="text-center text-dark mt-2">Le Tue Figurine sul Mercato</h5>
                             <div class="border-rounded p-2" style="max-height: 300px; overflow-y: auto;">
                                 <ul id="figurine-sul-mercato-list" class="list-group">
-                                    <li class="list-group-item d-flex align-items-center">
+                                    <!-- <li class="list-group-item d-flex align-items-center">
                                         <input type="checkbox" class="form-check-input me-2">
                                         <img src="https://via.placeholder.com/40" alt="Figurina" class="rounded me-2">
                                         <span>Captain America</span>
-                                    </li>
+                                    </li> -->
                                     <!-- figurine sul mercato caricate qui -->
                                 </ul>
                             </div>
@@ -185,13 +185,13 @@
                     <div class="d-flex justify-content-center gap-4 mt-3">
                         <div class="text-center">
                             <h7 class="text-dark">Tu dai</h7>
-                            <div class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
+                            <div id="baratto-uscita-tu-dai" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
                                 <!-- figurina che vuoi dare caricata qui -->
                             </div>
                         </div>
                         <div class="text-center">
                             <h7 class="text-dark">In cambio di</h7>
-                            <div class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
+                            <div id="baratto-uscita-in-cambio-di" class="border p-3 rounded d-flex flex-column align-items-center" style="width: 150px; height: 200px">
                                 <!-- figurina che vuoi ricevere caricata qui -->
                             </div>
                         </div>
@@ -209,5 +209,7 @@
         </div>
         <!-- <script src="/frontend/js/homepage.js" defer></script> -->
         <script src="/frontend/js/market-display.js"></script>
+        <script src="/frontend/js/user-figurine.js"></script>
+        <script src="/frontend/js/market-figurine.js"></script>
     </body>
 </html>
