--- a/public/frontend/compra_cre.html
+++ b/public/frontend/compra_cre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="h-100">
+<html lang="it" class="bg-darkred">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
         <link href="/frontend/css/credits.css" rel="stylesheet">
     </head>
-    <body class="d-flex h-100 text-center bg-darkred text-white">
+    <body class="d-flex text-center bg-darkred text-white">
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
