swagger completo, il codice va ancora pulito ma è quasi fatta

--- a/public/frontend/landing.html
+++ b/public/frontend/landing.html
@@ -26,10 +26,7 @@
             </header>
             <main class="px-3">
                 <h1>Eccoti su MarvelHeroes!</h1>
-                <p class="lead">Descrizione di sto cazzo di sito</p>
-                <p class="lead">
-                    <a href="" class="btn btn-lg btn-seconadry fw-bold border-white bg-white">Fidati, ci servirà un bottone</a>
-                </p>
+                <p class="lead">Esplora, colleziona e scambia figurine dei tuoi personaggi preferiti Marvel</p>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
