--- a/public/frontend/myalbum.html
+++ b/public/frontend/myalbum.html
@@ -55,7 +55,7 @@
                 </div>
             </header>
             <main class="container py-4">
-                <h1>Il Mio Album</h1>
+                <h1 class="mb-4">Il Mio Album</h1>
 
                 <!-- Contenitore delle figurine -->
                  <div id="album-container" class="grid-container row"></div>
