--- a/public/frontend/baratto.html
+++ b/public/frontend/baratto.html
@@ -46,7 +46,7 @@
                 </div>
             </nav>
             <header class="py-3 mb-4">
-                <div class="container d-flex flex-wrap justify-content-center">
+                <div class="container d-flex flex-wrap justify-content-between">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-light text-decoration-none">
                         <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes </span>
@@ -141,12 +141,41 @@
                 </div>
                 <div class="section-container mt-4 bg-dark">
                     <h5 class="text-center text-light">Proposte di Scambio</h5>
+
+                    <div id="proposta-da-mandare">
+                        <h6 class="text-center text-light">
+                            Proponi Baratto a: <span id="username-destinatario" class="fw-bold"></span>
+                        </h6>
+                        <div class="container">
+                            <div class="row justify-content-center gap-4 mt-3">
+                                <!-- sezione "tu dai" -->
+                                <div class="col-12 col-md-5 text-center">
+                                    <h7 class="text-light">Tu dai</h7>
+                                    <div id="baratto-uscita-tu-dai" class="p-3 d-flex flex-column align-items-center">
+                                        <!-- figurina che vuoi dare caricata qui -->
+                                    </div>
+                                </div>
+                                <!-- sezione "in cambio di" -->
+                                <div class="col-12 col-md-5 text-center">
+                                    <h7 class="text-light">In cambio di</h7>
+                                    <div id="baratto-uscita-in-cambio-di" class="p-3 d-flex flex-column align-items-center">
+                                        <!-- figurina che vuoi ricevere caricata qui -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="text-center mt-4">
+                            <button id="proponi-baratto-btn" class="btn btn-primary btn-lg mb-5" type="submit">Proponi</button>
+                        </div>
+                    </div>
+
                     <h6 class="text-light">In Entrata</h6>
                     <div class="row">
                         <!-- tabella delle proposte di scambio -->
                          <div class="col-md-8">
                             <div class="table-responsive" style="max-height: 100%; overflow-y: auto;">
-                                <table class="table text-center align-middle table-striped table-bordered">
+                                <table class="table text-center align-middle table-striped table-hover">
                                     <thead class="table-light">
                                         <tr>
                                             <th scope="col">Utente</th>
@@ -157,7 +186,7 @@
                                     </thead>
                                     <tbody id="proposte-scambio-list">
                                         <tr class="bg-light">
-                                            <td colspan="3" class="text-muted py-3">Nessuna proposta disponibile</td>
+                                            <td colspan="4" class="text-muted py-3">Nessuna proposta disponibile</td>
                                         </tr>
                                         <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
                                         <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -189,7 +218,7 @@
 
                     <h6 class="text-light text-center">In Uscita</h6>
                     <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
-                        <table class="table text-center align-middle table-striped table-hover">
+                        <table class="table text-center align-middle table-striped table-hover mb-5">
                             <thead class="table-light">
                                 <tr>
                                     <th>Hai proposto a</th>
@@ -199,43 +228,13 @@
                                 </tr>
                             </thead>
                             <tbody id="storico-proposte-list">
-                                <tr class="bg-light">
-                                    <td colspan="3" class="text-muted py-3">Nessuna proposta disponibile</td>
-                                </tr>
-                                <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-                                <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-                                <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
-                                <tr class="bg-light"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
                                 <!-- storico delle proposte di scambio caricate qui -->
                             </tbody>
                         </table>
                     </div>
 
-                    <h6 class="text-center text-light">
-                        Proponi Baratto a: <span id="username-destinatario" class="fw-bold"></span>
-                    </h6>
-                    <div class="container">
-                        <div class="row justify-content-center gap-4 mt-3">
-                            <!-- sezione "tu dai" -->
-                            <div class="col-12 col-md-5 text-center">
-                                <h7 class="text-light">Tu dai</h7>
-                                <div id="baratto-uscita-tu-dai" class="p-3 d-flex flex-column align-items-center">
-                                    <!-- figurina che vuoi dare caricata qui -->
-                                </div>
-                            </div>
-                            <!-- sezione "in cambio di" -->
-                            <div class="col-12 col-md-5 text-center">
-                                <h7 class="text-light">In cambio di</h7>
-                                <div id="baratto-uscita-in-cambio-di" class="p-3 d-flex flex-column align-items-center">
-                                    <!-- figurina che vuoi ricevere caricata qui -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     
-                    <div class="text-center mt-4">
-                        <button id="proponi-baratto-btn" class="btn btn-primary btn-lg" type="submit">Proponi</button>
-                    </div>
+
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
