--- a/public/frontend/compra_pac.html
+++ b/public/frontend/compra_pac.html
@@ -9,12 +9,11 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
         <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
-    <body class="d-flex text-center bg-darkred text-white">
+    <body>
         <!--Bootstrap Bundle con Popper (?)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        
-        <!--header-->
-        <div class="w-100">
+
+        <div class="w-100 h-100 d-flex text-center bg-darkred bg-scroll overflow-auto flex-column text-white">
             <nav class="py-2">
                 <div class="container d-flex flex-wrap">
                     <ul class="nav me-auto">
