--- a/public/frontend/homepage.html
+++ b/public/frontend/homepage.html
@@ -56,7 +56,7 @@
                 </div>
             </header>
             <main class="container py-4">
-                <h1 id="welcomeMessage"></h1>
+                <h1 id="welcomeMessage" class="mb-4"></h1>
                 <div class="row g-3" id="grid-container">
                     <!--Figurine caricate dinamicamente-->
                 </div>
